assets/css/pages/home/_sm.scss
.courses-section{
    margin-top: 100px;
}

.articles-section {
    margin-top: 100px;
    .articles-swiper {
        margin-left: 0;
    }
}
.padcasts-section {
    margin-top: 100px;

    .main-content {
        .padcast-swiper-container {
            .padcast-swiper {
                overflow-x: hidden;
                padding-top: 8px;
                margin-left: 0px;
                .swiper-wrapper {
                    .swiper-slide {
                        opacity: 1;
                        transform: scale(1);
                    }

                    .swiper-slide-active {
                        opacity: 1;
                        z-index: 10;
                        transform: scale(1);
                        margin-top: 0px;
                        // background: transparent;
                    }
                    .swiper-slide-prev,
                    .swiper-slide-next {
                        margin-bottom: 0px;
                    }
                    .swiper-button-next,.swiper-button-prev{
                        display: flex;
                    }
                    
                }
                .button-prev {
                    display: inline;
                }

                .button-next {
                    display: inline;
                }
            }
        }
    }
}
.courses-section {
    .courses-swiper {
        margin-left: 0;
    }
}

